# Art-Game

./: .gitignore  Brush.cpp  Brush.h  CMakeLists.txt  Character.cpp  Character.h  Colors.h  DottedBrush.cpp  DottedBrush.h  Eraser.cpp  Eraser.h  Headings.cpp  Headings.h  Map.cpp  Map.h  NormalBrush.cpp  NormalBrush.h  Platform.h  Shapes.cpp  Shapes.h  Splatter.cpp  Splatter.h  graphics.cpp  graphics.h  main.cpp
